# palm-case-study

./: FORECASTING_CHANGES_SUMMARY.md  FORECASTING_ENHANCEMENT_COMPLETE.md  FORECASTING_IMPLEMENTATION.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
components/blocks/: balance_reconciliation_chart.tsx  cash_flow_drivers.tsx  category_difficulty_chart.tsx  day_of_week_revenue.tsx  final_recommendations.tsx  forecast_accuracy_table.tsx  forecast_analysis.tsx  forecast_metrics_explainer.tsx  forecast_winner_callout.tsx  income_with_holidays.tsx  kpi_cards.tsx  monthly_forecast_chart.tsx  revenue_expenses.tsx  revenue_heatmap.tsx  revenue_heatmap_v2.tsx  system_forecast_coverage_grid.tsx  tools_methodology.tsx  transaction_quality_metrics.tsx  (+2 more)
lib/: chartUtils.ts  utils.ts
scripts/: .gitignore  ANALYSIS_DELIVERABLES.md  NOTEBOOK_REORGANIZATION_SUMMARY.md  main.ipynb  main_backup.ipynb  pyproject.toml  revenue_expenses_chart_data.csv  tasks.md
scripts/datasets/data_quality/: data_quality_balance_reconciliation.json  data_quality_system_forecast_gaps.json  data_quality_transactions.json  data_quality_user_forecasts.json
scripts/datasets/extra_datasets/: bank_holidays_2025.csv
scripts/datasets/forecast_analysis/: forecast_daily_reconstruction.csv  mape_metrics.csv  unified_forecast_daily.csv
scripts/datasets/raw/: balances.csv  france_luxury_resort_revenue_2024_euros.csv  system_forecasts.csv  transactions.csv  user_forecasts.csv
scripts/palm_case_study_scripts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+26 files in other folders)
