[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palm-case-study-scripts"
version = "0.1.0"
description = "Financial analysis and plotting environment for scripts/"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Giannis Kotsas" }]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=15",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.22",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "jupyter>=1.0",
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "python-dotenv>=1.0",
]

[tool.setuptools]
packages = []


